// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`database <ConnectionState /> matches snapshot when connection established 1`] = `
<Fragment>
  <div
    className="iap-db__connection iap-db__connection--established"
  >
    <ConnectionIcon
      className="iap-db__connection-icon"
    />
    Connection Established
  </div>
</Fragment>
`;

exports[`database <ConnectionState /> matches snapshot when connection failed 1`] = `
<Fragment>
  <div
    className="iap-db__connection iap-db__connection--failed"
  >
    <ErrorIcon
      className="iap-db__connection-icon"
    />
    Connection Failed
  </div>
</Fragment>
`;

exports[`database <ConnectionState /> matches snapshot when connection test required 1`] = `
<Fragment>
  <Button
    Icon={[Function]}
    disabled={false}
    error={false}
    iconClassName=""
    onClick={[MockFunction]}
    stretch={false}
    transparent={false}
    type="button"
  >
    Test connection
  </Button>
</Fragment>
`;
